@@ -526,6 +526,8 @@ SELECT 12 - count(*) FROM typetest1 LIMIT 1;
 -- no LIMIT push-down if there is a local WHERE condition
 EXPLAIN (COSTS OFF) SELECT id FROM typetest1 WHERE vc < 'u' LIMIT 1;
 SELECT id FROM typetest1 WHERE vc < 'u' LIMIT 1;
+-- no LIMIT pushdown with FOR SHARE/UPDATE
+EXPLAIN (COSTS OFF) SELECT id FROM typetest1 ORDER BY id LIMIT 1 FOR UPDATE;
 
 /* test ANALYZE */
 
